Page jumping has been fixed to avoid changes in layout when scroll bar appears for a long pages.

--- a/subprojects/OnlineAthletics/web/resources/libraries/bootstrap/css/bootstrap.css
+++ b/subprojects/OnlineAthletics/web/resources/libraries/bootstrap/css/bootstrap.css
@@ -446,7 +446,8 @@ th.hidden-lg,td.hidden-lg{display:table-cell !important}
 @media (min-width:992px) and (max-width:1199px){.hidden-lg.hidden-md,tr.hidden-lg.hidden-md,th.hidden-lg.hidden-md,td.hidden-lg.hidden-md{display:none !important}}
 @media (min-width:1200px){.hidden-lg,tr.hidden-lg,th.hidden-lg,td.hidden-lg{display:none !important}}
 .visible-print,tr.visible-print,th.visible-print,td.visible-print{display:none !important}
-@media print{.visible-print{display:block !important}table.visible-print{display:table} tr.visible-print{display:table-row !important} th.visible-print,td.visible-print{display:table-cell !important} .hidden-print,tr.hidden-print,th.hidden-print,td.hidden-print{display:none !important}}.navbar-region{height:80px}
+@media print{.visible-print{display:block !important}table.visible-print{display:table} tr.visible-print{display:table-row !important} th.visible-print,td.visible-print{display:table-cell !important} .hidden-print,tr.hidden-print,th.hidden-print,td.hidden-print{display:none !important}}html{overflow-y:scroll}
+.navbar-region{height:80px}
 footer{color:#6e6e6e;font-size:11px;-webkit-font-smoothing:antialiased}footer>.footer-divider{clear:both;width:100%;border-top:1px solid #ddd}
 footer .piped-links{padding-left:0px}footer .piped-links>p{float:left;padding-right:10px}
 footer .piped-links>li{float:none;display:inline-block;margin-left:.3em;padding-left:.6em;border-left:1px solid #ccc}
