--- a/subprojects/OnlineAthletics/web/resources/libraries/bootstrap/less/common.less
+++ b/subprojects/OnlineAthletics/web/resources/libraries/bootstrap/less/common.less
@@ -1,3 +1,8 @@
+// avoid page jamping when right scroll bar appears
+html {
+    overflow-y: scroll;
+}
+
 // free space between page top and content
 .navbar-region {
     height: 80px;
